Add wallets and wallet by ID (index or Public Key)
